--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "chai": "^6.0.1",
+    "do": "^0.7.0",
+    "dotenv": "^17.2.2",
     "mocha": "^11.7.1",
     "mochawesome": "^7.1.3",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "tenv": "^0.2.3"
   }
 }
